# sekurak-academy-python-hacking

./: .gitignore  LICENSE  README.md  docker-compose.yml  kali-setup.sh  run.sh  ubuntu-setup.sh
exploits/: test.py
exploits/custom_hash_exploit/: hash.py  recovery_hash.py
exploits/dependency_confusion/: requirements.txt
exploits/dependency_confusion/very_corp_internal_package/: pyproject.toml
exploits/dependency_confusion/very_corp_internal_package/src/: hard_math.py
exploits/insecure_deserialization/: exploit.py  payloads.txt
exploits/jupyter/: sekurak-academy.ipynb
exploits/jupyter/.ipynb_checkpoints/: sekurak-academy-checkpoint.ipynb
exploits/network-scanner/: nmap-top1000.txt  scanner.py
exploits/project1/: game.py
exploits/sqli_exploit/: database_dump.txt  exploit.py
exploits/vulnerability-scanner/: sqli_polyglots.txt  vulnscanner.py
python-dashboard/: Dockerfile  app.py  requirements.txt
python-dashboard/migrations/versions/: 1b45aaa4b20d_initial_migration.py  1ce7873ac4ced2_add_users.py  da46978606b6_add_post_table.py
python-dashboard/models/: post.py  user.py
react-frontend/: Dockerfile  package-lock.json  package.json
react-frontend/public/: index.html
react-frontend/src/: App.js  index.js
react-frontend/src/components/: Navbar.js  Post.js
react-frontend/src/forms/: AddPostForm.js  AddSupportTicket.js  SearchPostsForm.js
react-frontend/src/pages/: Dashboard.js  Home.js  Login.js  PostPage.js  SupportConfirmation.js
spring-support/: Dockerfile  build.gradle  pom.xml  settings.gradle
(+6 files in other folders)
