[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "very_corp_internal_package"
version = "999999.0.1"
authors = [
  { name="Mateusz Lewczak", email="leftarcode@gmail.com" },
]
description = "Very important internal package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://sekurak.pl/"
"Bug Tracker" = "https://sekurak.pl/"